<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.vinyard.aoc</groupId>
    <artifactId>aoc</artifactId>
    <version>2024.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>aoc</name>

    <modules>
        <module>solutions</module>
        <module>plugins</module>
        <module>solutions-api</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                    <version>${maven-compiler-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.antlr</groupId>
                    <artifactId>antlr4-maven-plugin</artifactId>
                    <version>${antlr4-maven-plugin.version}</version>
                    <configuration>
                        <visitor>true</visitor>
                        <listener>true</listener>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>antlr4</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>dev.vinyard.bp</groupId>
                    <artifactId>blueprinter-maven-plugin</artifactId>
                    <version>${plugins-api.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
        <antlr4-maven-plugin.version>4.13.1</antlr4-maven-plugin.version>
        <junit-jupiter-engine.version>5.11.3</junit-jupiter-engine.version>
        <junit-jupiter-params.version>5.11.3</junit-jupiter-params.version>
        <assertj-core.version>3.24.2</assertj-core.version>
        <antlr4-runtime.version>4.13.1</antlr4-runtime.version>
        <commons-lang3.version>3.11</commons-lang3.version>
        <lombok.version>1.18.30</lombok.version>
        <velocity-tools-generic.version>3.1</velocity-tools-generic.version>
        <velocity-engine-core.version>2.4.1</velocity-engine-core.version>
        <pf4j.version>3.12.1</pf4j.version>
        <velocity-engine-core.version>2.3</velocity-engine-core.version>
        <plugins-api.version>v1.12.0</plugins-api.version>
        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
        <reflections.version>0.10.2</reflections.version>
        <okhttp.version>4.12.0</okhttp.version>
        <jsoup.version>1.17.1</jsoup.version>
        <java.version>21</java.version>
        <exec-maven-plugin.version>3.5.0</exec-maven-plugin.version>
        <spring-boot-dependencies.version>3.3.3</spring-boot-dependencies.version>
    </properties>
</project>
